@@ -2,13 +2,15 @@ package com.jean.database.gui.factory;
 
 import javafx.util.Callback;
 
+import java.lang.reflect.InvocationTargetException;
+
 public class ControllerFactory implements Callback<Class<?>, Object> {
 
     @Override
     public Object call(Class<?> param) {
         try {
-            return param.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return param.getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException(e);
         }
     }
